<resources>

    <string name="app_name">LivePrint</string>
    <string name="title_activity_lphome_page">LPHome</string>
    <string name="title_activity_nat_treasure_hunt">NatTreasureHunt</string>
    <string name="title_activity_lplist_page">LPList</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_control_panel">ControlPanel</string>
    <string name="title_activity_create_link_page">CreateLink</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_update_link">UpdateLink</string>
    <string name="title_activity_demo">Demo</string>
    <string name="action_settings">Settings</string>

    <string name="th_button_open_camera">Game on !</string>
    <string name="th_get_book">Don\'t have the book yet? Get one <a href="http://www.google.com">HERE</a></string>
    <string name="th_intro1_welcome">Welcome to the National Treasure Hunt App ! </string>
    <string name="th_intro2_scan_photos">Scan photos from the book <i>A Century of NHL Memories</i></string>
    <string name="th_intro3_to_find">to <b>find hidden treasures</b> and <b>win amazing prizes</b> !</string>
    <string name="th_intro4_start_by"><b>START BY SCANNING THE BOOK COVER!</b></string>
    <string name="th_intro5_tip"><i>Tip: Simply hold your phone over the image.</i></string>
    <string name="th_intro6_tip2"><i>No need to click !</i></string>
    <string name="button_open_lp">Open LP</string>
    <string name="button_open_th">Open TH</string>
    <string name="button_open_test">Open Test</string>
    <string name="button_back">Back</string>
    <string name="lp0_intro1_welcome">Welcome to the LivePrint App !</string>
    <string name="lp0_intro2_user">To start using LivePrint, click the button below !</string>
    <string name="lp0_button_start_lp">Start LP !</string>
    <string name="lp0_intro3_client">Otherwise, click below to access your Company\'s Control Panel</string>
    <string name="lp0_button_switch_lang">Français</string>
    <string name="lp0_button_login">Login</string>
    <string name="lpu1_choose_company">Select the company for which</string>
    <string name="lpu1_choose_company2">you would like to use LivePrint.</string>
    <string name="lpu1_button_open_camera">Open Camera</string>
    <string name="lpc1_enter_user">Enter your Username:</string>
    <string name="lpc1_enter_pass">Enter your Password:</string>
    <string name="lpc1_invalid_credentials">Credentials unrecognized. Please try again.</string>
    <string name="lpc1_button_login">Login</string>
    <string name="lpc1_button_register">Register</string>
    <string name="lpc1_no_account_register">Don\'t have an account? Register below:</string>
    <string name="lpc1b_register">Enter the name of the company and your chosen password.</string>
    <string name="lpc1b_hint_company">Company Name</string>
    <string name="lpc1b_hint_password">Password</string>
    <string name="lpc1b_button_register">Register</string>
    <string name="lpc1b_error_account_exists">Error: this company already has a registered account.</string>
    <string name="lpc1b_error_invalid_creds">Error: invalid credentials.</string>
    <string name="lpc1b_error_not_client">Error: this company has no partnership with LivePrint.</string>
    <string name="lpc2_intro_create">Create a new Link by pressing below.</string>
    <string name="lpc2_intro_modify">Alternatively, you can view/modify your existing links below.</string>
    <string name="lpc2_existing_links_title">Links of </string>
    <string name="lpc2_no_existing_links">No existing links.</string>
    <string name="lpc2_no_logged_company">No company logged in.</string>
    <string name="lpc2_intro_modify2">Enter the number of the link you wish to update (modify/delete) and press the Update button.</string>
    <string name="lpc2_button_create_link">Create a Link</string>
    <string name="lpc2_update_button">Update</string>
    <string name="lpc2_invalid_link_value">Link value invalid.</string>
    <string name="lpc3_upload_photo">First, choose the image to be recognized.</string>
    <string name="lpc3_button_photo">Upload Photo</string>
    <string name="lpc3_selected_image"><i>Selected image:</i></string>
    <string name="lpc3_upload_video">Then, choose the video to be played upon recognition.</string>
    <string name="lpc3_button_video">Upload Video</string>
    <string name="lpc3_selected_video"><i>Selected video:</i></string>
    <string name="lpc3_button_create">Create Link</string>
    <string name="lpc3_create_link_fail">Failure…</string>
    <string name="lpc3_unknown_comp">Unknown Company. Please enter the credentials of the company for which you are creating this link then click the button below.</string>
    <string name="lpc3_unknown_comp_hint">Company Name</string>
    <string name="lpc3_unknown_comp_pass_hint">Password</string>
    <string name="lpc3b_info1">Currently updating Link</string>
    <string name="lpc3b_info2">of Company </string>
    <string name="lpc3b_update_photo_name">New Photo Name</string>
    <string name="lpc3b_update_video_name">New Video Name</string>
    <string name="lpc3b_update_names">Use the following boxes to update the photo/video names. If left blank, the name will not updated.</string>
    <string name="lpc3b_delete_link">Alternatively, click the button below to delete the link.</string>
    <string name="lpc3b_button_update">Update</string>
    <string name="lpc3b_button_delete">Delete</string>


    <string name="demo_intro">Take a picture to begin the inspection process.</string>
    <string name="demo_identification">Identified resource:</string>

</resources>