<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdateLink"
    tools:showIn="@layout/activity_update_link">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lpc3b_intro_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />

        <View
            android:id="@+id/lpc3b_empty1"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FAFAFA" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lpc3b_update_names" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/lpc3b_update_photo_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lpc3b_update_photo_name" />

            <EditText
                android:id="@+id/lpc3b_update_video_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lpc3b_update_video_name" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="updateLink"
            android:text="Update" />

        <View
            android:id="@+id/lpc3b_empty2"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#FAFAFA" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lpc3b_delete_link"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="deleteLink"
            android:text="Delete"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>